@@ -1,0 +1,3 @@
+MD5 c6fbc48c6204a3dc5f429ee600fc207a paludis-0.10.0.tar.bz2 865968
+RMD160 524491fe422b9c58460f648075e029a5818ea13a paludis-0.10.0.tar.bz2 865968
+SHA256 6c3a94c5f6904ad25cdc324d5113c75836404e9538cec615d688f4bdd1f144c3 paludis-0.10.0.tar.bz2 865968
