@@ -1,0 +1,98 @@
+# Copyright 1999-2006 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/paludis/Attic/paludis-0.10.0.ebuild,v 1.1 2006/11/28 19:59:27 hansmi Exp $
+
+inherit bash-completion
+
+DESCRIPTION="paludis, the other package mangler"
+HOMEPAGE="http://paludis.berlios.de/"
+SRC_URI="http://download.berlios.de/paludis/${P}.tar.bz2"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~hppa ~mips ~ppc ~sparc ~x86"
+IUSE="doc pink selinux qa ruby glsa"
+
+DEPEND="
+	dev-cpp/libebt
+	dev-cpp/libwrapiter
+	>=app-shells/bash-3
+	>=sys-devel/autoconf-2.59
+	=sys-devel/automake-1.9*
+	doc? ( app-doc/doxygen )
+	selinux? ( sys-libs/libselinux )
+	qa? ( dev-libs/pcre++ >=dev-libs/libxml2-2.6  app-crypt/gnupg )
+	glsa? ( >=dev-libs/libxml2-2.6 )
+	ruby? ( >=dev-lang/ruby-1.8 )"
+
+RDEPEND="
+	>=app-admin/eselect-1.0.2
+	>=app-shells/bash-3
+	net-misc/wget
+	net-misc/rsync
+	qa? ( dev-libs/pcre++ >=dev-libs/libxml2-2.6 app-crypt/gnupg )
+	glsa? ( >=dev-libs/libxml2-2.6 )
+	!mips? ( sys-apps/sandbox )
+	selinux? ( sys-libs/libselinux )
+	ruby? ( >=dev-lang/ruby-1.8 )"
+
+PROVIDE="virtual/portage"
+
+src_compile() {
+	econf \
+		$(use_enable doc doxygen ) \
+		$(use_enable !mips sandbox ) \
+		$(use_enable pink) \
+		$(use_enable selinux) \
+		$(use_enable glsa) \
+		$(use_enable qa) \
+		$(use_enable ruby) \
+		--disable-gtk --disable-gtk-tests \
+		|| die "econf failed"
+
+	emake || die "emake failed"
+	if use doc ; then
+		make doxygen || die "make doxygen failed"
+	fi
+}
+
+src_install() {
+	emake DESTDIR="${D}" install || die "install failed"
+	dodoc AUTHORS README ChangeLog NEWS
+
+	BASH_COMPLETION_NAME="adjutrix" dobashcompletion bash-completion/adjutrix
+	BASH_COMPLETION_NAME="paludis" dobashcompletion bash-completion/paludis
+	use qa && \
+		BASH_COMPLETION_NAME="qualudis" dobashcompletion bash-completion/qualudis
+
+	if use doc ; then
+		dohtml -r -V doc/html/
+	fi
+}
+
+src_test() {
+	# Work around Portage bugs
+	export PALUDIS_DO_NOTHING_SANDBOXY="portage sucks"
+	export BASH_ENV=/dev/null
+
+	emake check || die "Make check failed"
+}
+
+pkg_postinst() {
+	if use bash-completion ; then
+		echo
+		einfo "The following bash completion scripts have been installed:"
+		einfo "  paludis"
+		einfo "  adjutrix"
+		use qa && einfo "  qualudis"
+		einfo
+		einfo "To enable these scripts, run:"
+		einfo "  eselect bashcomp enable <scriptname>"
+	fi
+
+	echo
+	einfo "Before using Paludis and before reporting issues, you should read:"
+	einfo "    http://paludis.berlios.de/KnownIssues.html"
+	echo
+}
+
