@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/paludis
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/paludis/ChangeLog,v 1.26 2006/11/15 19:06:15 pioto Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/paludis/ChangeLog,v 1.27 2006/11/28 19:59:27 hansmi Exp $
+
+*paludis-0.10.0 (28 Nov 2006)
+
+  28 Nov 2006; Michael Hanselmann <hansmi@gentoo.org>
+  +paludis-0.10.0.ebuild:
+  Version bump.
 
 *paludis-0.8.4 (15 Nov 2006)
 
